Fix code block line numbers aligning weirdly (#44)
* Fix code block line numbers aligning weirdly

--- a/src/scss/code/_code.scss
+++ b/src/scss/code/_code.scss
@@ -111,6 +111,11 @@ table.highlighttable {
 
         div {
             height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0%;
+
+            pointer-events: none;
 
             pre {
                 background: white;
